--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "motion": "^12.4.3",
     "next": "^15.1.7",
     "next-themes": "^0.4.4",
-    "react": "^16.8.0 || ^17.0.1 || ^18.0.0 ||^19.0.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^16.8.0 || ^17.0.1 || ^18.0.0 || ^19.0.0 ",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
